infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-website
  template:
    metadata:
      labels:
        app: static-website
    spec:
      # --- מעתיקים את אתר ה-build ל-PVC אם הוא ריק ---
      containers:
        - name: nginx
          image: yogevfarjoun/winning-award-website:latest
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /index.html
              port: 80
            periodSeconds: 1
            failureThreshold: 30

          volumeMounts:
            - name: html-storage
              mountPath: /usr/share/nginx/html

      volumes:
        - name: html-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
