infra/k8s/service-static.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-website-svc
  namespace: demo-app
  labels:
    app: award-website
spec:
  selector:
    app: award-website
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
